fixing menu on mobile

--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ nav {
     white-space: nowrap;
 }
 
+.burger {
+    display: none;
     cursor: pointer;
 }
 
